cmake_minimum_required(VERSION 3.17)
project(30_days_of_code_202101)

set(CMAKE_CXX_STANDARD 14)

add_executable(30_days_of_code_202101 main.cpp day_04/day04.cpp day_05_Spiral_Matrix/day05.cpp day_06_Coins_of_Geekland/day06.cpp day_07_Valid_Pair_Sum/day07.cpp day_09_transfiguration/day09.cpp day_08_dam_of_candies/day08.cpp day_10_Repeated_String_Match/day10.cpp day_11_Secret_Cipher/day11.cpp)